<resources>
    <string name="app_name">Saree</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="gender">Gender</string>
    <string name="password">Password</string>
    <string name="add_photo">Select Photo</string>
    <string name="username">User Name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign In</string>

    <string-array name="saree_style">
        <item>shaandar</item>
        <item>khoobsurat</item>
        <item>New</item>
        <item>Recommended</item>
        <item>Hit</item>
        <item>High Quality</item>
        <item>Good Price</item>
    </string-array>

    <string-array name="saree_fabric">
        <item>SILK</item>
        <item>GEORGERRE</item>
        <item>SANA</item>
        <item>KANJEEVARAM</item>
        <item>ART SILK</item>
        <item>COTTON SILK</item>
        <item>CHIFFON</item>
        <item>BANARASI</item>
        <item>JAPAN SATIN</item>
        <item>COTTON</item>
        <item>NET</item>
        <item>BHAGALPURI</item>
    </string-array>

</resources>
