<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_register"
    tools:context="social.media.saree.regiser.register">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/parentview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/back_flow"
                android:orientation="vertical"
                android:paddingLeft="8dp"
                android:paddingTop="8dp"
                android:paddingRight="8dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:orientation="horizontal"
                    android:weightSum="10">


                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="6"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/ts"
                            android:text="@string/username"
                            android:textColor="@color/textcolor" />

                        <EditText
                            android:id="@+id/username_edt"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:inputType="textPersonName"
                            android:textColor="@color/textcolor" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="4"

                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/profile_pic"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:layout_gravity="center"
                            android:layout_marginTop="10dp"
                            android:src="@drawable/dummy_user" />

                        <TextView
                            android:fontFamily="@font/ts"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/add_photo"
                            android:textColor="@color/textcolor" />


                    </LinearLayout>


                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/ts"
                        android:text="Official Email"
                        android:textColor="@color/textcolor" />

                    <EditText
                        android:id="@+id/email_official_edt"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/textcolor" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/ts"
                        android:text="Personal Email"
                        android:textColor="@color/textcolor" />

                    <EditText
                        android:id="@+id/personal_email_edt"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/textcolor" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/ts"
                        android:text="Official Number"
                        android:textColor="@color/textcolor" />

                    <EditText
                        android:id="@+id/official_number_edt"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:inputType="textEmailAddress|phone"
                        android:textColor="@color/textcolor" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/ts"
                        android:text="Personal Number"
                        android:textColor="@color/textcolor" />

                    <EditText
                        android:id="@+id/personal_number_edt"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:inputType="textEmailAddress|phone"
                        android:textColor="@color/textcolor" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/ts"
                        android:text="Address"
                        android:textColor="@color/textcolor" />

                    <EditText
                        android:id="@+id/user_address"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:inputType="textEmailAddress|phone"
                        android:textColor="@color/textcolor" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/ts"
                        android:text="Location"
                        android:textColor="@color/textcolor" />

                    <EditText
                        android:id="@+id/user_location"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:inputType="textEmailAddress|phone"
                        android:textColor="@color/textcolor" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/ts"
                        android:text="Designation"
                        android:textColor="@color/textcolor" />

                    <EditText
                        android:id="@+id/designation_edt"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:inputType="textPostalAddress|textEmailAddress"
                        android:textColor="@color/textcolor" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:orientation="vertical">

                    <TextView
                        android:fontFamily="@font/ts"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/password"
                        android:textColor="@color/textcolor" />

                    <EditText
                        android:id="@+id/password_edt"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:inputType="textPassword"
                        android:textColor="@color/textcolor" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:orientation="vertical">

                    <TextView
                        android:fontFamily="@font/ts"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/gender"
                        android:textColor="@color/textcolor" />

                    <RadioGroup
                        android:id="@+id/genderrb"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/malerb"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:text="@string/male"
                            android:textColor="@color/common_google_signin_btn_text_light_pressed" />

                        <RadioButton
                            android:id="@+id/femalerb"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:checked="false"
                            android:text="@string/female"
                            android:textColor="@color/common_google_signin_btn_text_light_pressed" />


                    </RadioGroup>

                </LinearLayout>

                <Button
                    android:id="@+id/register_btn"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/selector_btn_next"
                    android:text="Register"
                    android:textColor="@color/textcolor" />

                <Button
                    android:id="@+id/update_btn"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/selector_btn_next"
                    android:text="Update"
                    android:textColor="@color/textcolor"
                    android:visibility="gone" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp">


            </LinearLayout>

        </LinearLayout>


    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>